--- a/documentation/roga_docu.tex
+++ b/documentation/roga_docu.tex
@@ -337,7 +337,7 @@ Während bei MinMax die addierten Kosten minimiert oder der addierte Reward maxi
 \subsubsection{Path Planning}
 Durch eine gegebene Umgebungskarte versucht der Roboter den kürzesten Weg zu seinem Ziel zu berechnen. Um dies zu erreichen wird die Karte beispielsweise mit einem Occupancy grid in Zellen zerlegt und mit einem Shortest Path Algorithmus wie dem A*-Algorithmus die kürzeste Distanz vom Start zum Ziel berechnet.  
 \subsection{Zielsetzung}
-In diesem Projekt soll ein kraftbasierter Ansatz implementiert werden. Anschließend sollen die Parameter so angepasst werden das sie möglichst optimal im Wettkampf gegen die anderen Ansätze der anderen Teilnehmer de Projekts abschneiden.
+In diesem Projekt soll ein kraftbasierter Ansatz implementiert werden. Anschließend sollen die Parameter so angepasst werden das sie möglichst optimal im Wettkampf gegen die anderen Ansätze der anderen Teilnehmer des Projektes abschneiden.
 \clearpage
 
 \section{Konzept}
