--- a/documentation/roga_docu.tex
+++ b/documentation/roga_docu.tex
@@ -301,140 +301,134 @@ Das Spiel gilt als beendet, sobald:
 In diesem Projekt wurde die Rolle der Katze übernommen.
 
 \subsection{Anforderungen}
-Bei den verwendeten Robotern handelt es sich jeweils um einen Turtlebot3 Burger.\\ Dieser Roboter hat eine maximale Lineargeschwindigkeit von 0.22 m/s und eine maximale Winkelgeschwindigkeit von 2.84 rad/s. \footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/specifications/\#hardware-specifications}}\\
-Um Hindernisse zu erkennen, besitzt er einen Laserscanner mit einer Scanreichweite von 120 bis 3500mm und einer Auflösung von 1 Grad. \footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/appendix_lds_01/}} \\\\
+Bei den verwendeten Robotern handelt es sich jeweils um einen Turtlebot3 Burger.\\ 
+Dieser Roboter hat eine maximale Lineargeschwindigkeit von 0.22 m/s und eine maximale Winkelgeschwindigkeit von 2.84 rad/s. \footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/specifications/\#hardware-specifications}}\\
+Die Drehung des Roboters wird durch einen Radianten \footnote {Wertebereich [0:2 $\pi$]} angegeben. Ein positiver Wert führt zu einer Drehung gegen den Uhrzeigersinn, dementsprechend führt ein negativer Wert zu einer Drehung in Uhrzeigersinn.
+Um Hindernisse zu erkennen, besitzt er einen Laserscanner mit einer Scanreichweite von 120 bis 3500 mm und einer Auflösung von 1 Grad. \footnote {1 Gard ~ 0,0174533} \footnote{\url{https://emanual.robotis.com/docs/en/platform/turtlebot3/appendix_lds_01/}} 
+\\\\
 Für das Spiel gibt es jedoch Restriktionen der Roboter bezüglich Linear- und Winkelgeschwindigkeit.\\
 \paragraph{Katze:}
 \begin{description}
  \item Lineargeschwindigkeit: konstant 0.22 m/s
  \item Winkelgeschwindigkeit: -0.8 ... 0.8 rad/s
-\end{description}	
+\end{description}    
 \paragraph{Maus:}
 \begin{description}
  \item Lineargeschwindigkeit: konstant 0.18 m/s
  \item Winkelgeschwindigkeit: -2.84 .. 2.84 rad/s
 \end{description}
 \clearpage
-\subsubsection{Maps}
-Das  Spiel findet auf drei unterschiedlichen Maps statt:
+\subsubsection{Karten}
+Für das Projekt wurden seches Karten bereitgestellt. Drei für das Spiel und drei weitere Karten um Grenzfälle zu testen.  Die drei Grenzfallkarten wurden bei der Entwicklung nicht berücksichtigt daher werden sie im folgenden nicht behandelt.
 \mygraphics{0.5\textwidth}{Welt1.png}{Welt 1}
-
-In dieser Welt gibt es viele Hindernisse, weshalb es für den Roboter schwer ist sich darin kollisionsfrei zu bewegen. Durch die viel langsamere Winkelgeschwindigkeit kann die Maus die Katze dort leicher ausmanövrieren.
+Die erste Welt (\ref{fig:Welt1.png} ist der stilistischen Sicht einer Schildkröte nachempfunden. Die Welt ist durch eine sechsseitige Mauer eingegrenzt Jede Ecke ist durch eine Säule abgerundet. In der Mitte der Welt befinden sich neun Säulen, die in einem Raster angeordnet sind. Der Käse ist an der gegenüberliegenden Seite zur Maus positioniert. Die Katze befindet nahe dem Käse leicht seitlich zwischen Maus und Käse.
 \mygraphics{0.5\textwidth}{Welt2.png}{Welt 2}
-
-Welt 2 hat weniger Hindernisse, als die erste Welt, weshalb die Kollisionsvermeidung dort für beide Roboter leichter ist, die Katze aber trotzdem noch ausmanövriert werden kann.
+Die zweite Welt ist quadratisch eingemauert und besitzt vier Säulen in der Kartenmitte. Katze und Maus sind an gegenüberliegenden Ecken positioniert. Der Käse liegt in der Nähe der Maus allerdings blickt die Maus in entgegengesetzte Richtung.
 \mygraphics{0.5\textwidth}{Welt3.png}{Welt 3}
-
-In dieser Welt gibt es bis auf den Käse und den gegnerischen Roboter keine Hindernisse. Daher müsste die Katze durch ihre größere Lineargeschwindigkeit im Vorteil sein.
+In der dritten Welt befinden sich nur die Katze, die Maus und der Käse.
+Alle drei befinden sich auf einer Geraden.
 \subsection{Mögliche Implementierungsmöglichkeiten}
-I2m Laufe des Semester wurden verschiedene Methoden, das Verhalten des Roboters zu implementieren, in der Vorlesung vorgestellt.
+Im Laufe des Semester wurden verschiedene Methoden, das Verhalten des Roboters zu implementieren, in der Vorlesung vorgestellt.
 \subsubsection{Kraftbasierte Kollisionsvermeidung und Homing}
-Bei diesen Verfahren wird bei der Kollisionsvermeidung eine Kraft berechnet, die von den Hindernissen auf den Roboter wirken und ihn um so mehr abstoßen, je näher er an einem Hindernis ist. Beim Homing erfährt der Roboter eine Anziehungskraft auf einen Punkt im Spielfeld. Durch das Zusammenaddieren beider Kräfte, dem Homing und der Kollisionsvermeidung, ergibt sich eine neue Kraft, die den Roboter von Hindernissen abstößt ihn jedoch gleichzeitig immer näher zum Ziel treibt 
+Bei diesen Verfahren wird bei der Kollisionsvermeidung eine Kraft berechnet, die von den Hindernissen auf den Roboter wirken. Je näher der Roboter an einem Hindernis ist, desto mehr wird er von diesem  abstoßen. Beim Homing erfährt der Roboter eine Anziehungskraft auf einen Punkt im Spielfeld. Durch das Aufaddieren beider Kräfte, dem Homing und der Kollisionsvermeidung, ergibt sich die endgültige Kraft, die den Roboter von Hindernissen abstößt ihn jedoch gleichzeitig immer näher zum Ziel treibt.
 \subsubsection{Sense Plan Act}
-Hier wird für jede Folge von möglichen Zuständen der maximale Nutzen berechnet, der Roboter arbeitet somit vorrausschauend. Dabei entsteht ein Suchbaum. Dieser Suchbaum kann mit dem MinMax-Algorithmus in diesem Spielfall optimiert werden.
+Hier wird für jede Folge von möglichen Zuständen der maximale Nutzen berechnet, der Roboter arbeitet somit vorausschauend. Dabei entsteht ein Suchbaum. Dieser Suchbaum kann mit dem MinMax-Algorithmus optimiert werden.
 \subsubsection{Optimal Control}
 Während bei MinMax die addierten Kosten minimiert oder der addierte Reward maximiert wird, werden bei optimal control die integrierten Kosten minimiert.
 \subsubsection{Path Planning}
 Durch eine gegebene Umgebungskarte versucht der Roboter den kürzesten Weg zu seinem Ziel zu berechnen. Um dies zu erreichen wird die Karte beispielsweise mit einem Occupancy grid in Zellen zerlegt und mit einem Shortest Path Algorithmus wie dem A*-Algorithmus die kürzeste Distanz vom Start zum Ziel berechnet.  
 \subsection{Zielsetzung}
-In diesem Projekt soll ein kraftbasierter Ansatz implementiert werden. Anschließend sollen die Parameter so angepasst werden das sie möglichst optimal im Wettkampf gegen die anderen Ansätze der anderen Teilnehmer des Projektes abschneiden.
+Im Rahmen dieses Projekts wird ein kraftbasierter Ansatz implementiert. Im Laufe des Projekts wurden die Parameter so angepasst, dass sie möglichst optimal im Wettkampf gegen die Ansätze der anderen Teilnehmer des Projektes abschneiden.
 \clearpage
-
 \section{Konzept}
 \subsection{Grundverhalten}
-Die Katze hat zwei wesentliche Grundbestandteile. Sie kann ,auf einen gegebenen Punkt, \glqq homen\grqq{} und sie besitzt eine Kollisionsvermeidung.
+Die Katze hat zwei wesentliche Grundbestandteile. Sie kann ,auf einen gegebenen Punkt,  \glqq homen\grqq{} und sie besitzt eine Kollisionsvermeidung.
 \subsection{Homing}
 \subsubsection{Ziele}
-F"ur das Homing gibt es vier verschiedene Ziele (\ref{fig:homingZiele.png}). Den K"ase, der Mittelpunkt zwischen K"ase und Maus, die Maus und der vermutete Punkt auf den sich die Maus zubewegt.
+F"ur das Homing gibt es vier verschiedene Ziele (\ref{fig:homingZiele.png}). 
+\begin{enumerate}
+\item der K"ase
+\item der Mittelpunkt zwischen K"ase und Maus
+\item der vermutete Punkt auf den sich die Maus zubewegt
+\item die Maus
+\end{enumerate}
 \mygraphics{0.7\textwidth}{homingZiele.png}{Ziele f"ur das Homing}
 \clearpage
 \subsubsection{Zustandsautomat}
-Die Zielauswahl wird durch einen Zustandsautomat (\ref{fig:stateMachine.png}) festgelegt.
-Der Zustandsautomat besitzt drei Zust"ande, mit dem Zustand \glqq go to cheese\grqq{} als Startzustand. Der Zustand \glqq go to cheese\grqq{} entspricht dem K"ase, der Zustand \glqq go to mid\grqq{} den Mittelpunkt zwischen Maus und K"ase als Ziel und der Zustand \glqq hunt\grqq{} fasst die zwei Ziele Maus und den vorrausberechnenten Punkt zusammen. Wie der Zustand \glqq hunt\grqq{} sich verh"alt wird im Abschnitt \ref{hunt} genauer erl"autert.\\
+Die Zielauswahl wird durch einen Zustandsautomaten (\ref{fig:stateMachine.png}) festgelegt.
+Der Zustandsautomat besitzt drei Zust"ande, mit dem Zustand \glqq go to cheese\grqq{} als Startzustand. Im Zustand \glqq go to cheese\grqq{} ist der K"ase das Ziel, im Zustand \glqq go to mid\grqq{} ist der Mittelpunkt zwischen Maus und K"ase das Ziel und der Zustand \glqq hunt\grqq{} fasst die zwei Ziele Maus und den vermutete Punkt auf den sich die Maus zubewegt zusammen. Wie der Zustand \glqq hunt\grqq{} sich verh"alt wird im Abschnitt \ref{hunt} genauer erl"autert.\\
 \hspace*{0.63\textwidth}\scalebox{0.7}{\begin{tabular}[h]{|c|}
 \hline
-m\_c\_d := Maus-Katze Distanz \\ m\_ch\_d := Maus-Käse Distanz \\ c\_ch\_d := Katze-Käse Distanz \\
+m\_c\_d := Maus-Katze Distanz \\ 
+m\_ch\_d := Maus-Käse Distanz \\ 
+c\_ch\_d := Katze-Käse Distanz \\
 \hline
 \end{tabular}}
-
 \mygraphics{0.7\textwidth}{stateMachine.png}{Zustandsautomat}
 Es gibt drei Kriterien die einen Zustandswechsel zur Folge haben. Das \glqq arrived\grqq{} Kriterium ist hierbei das einfachste und wird erreicht sobald ein gewisser Abstand zum Zielpunkt unterschritten wird.\\
-Das zweite Kriterium \glqq$m\_c\_d < P_{1} \land  m\_ch\_d > P_{2} $\grqq{} besagt: sollten der Abstand zwischen Katze und Maus einen gewissen Wert $P_{1}$ unterschritten haben und zus"atzlich der Abstand zwischen K"ase und Maus einen weiteren Wert $P_{2}$ "uberschritten haben so wird der Zustand gewechselt. Umgangsprachlich ausgedr"uckt bedeutet es, dass sollte sich die Katze nah an der Maus befinden und die Maus aber noch weit genug vom K"ase weg sein so wird die Maus gejagt. Wobei der Parameter $P_{1}$ \glqq nah \grqq{} und der Parameter $P_{2}$ \glqq noch weit genug\grqq{} eingrenzt. $P_{1}$ und $P_{2}$ wurden empirisch festgelegt.\\
-Das dritte Kriterum \glqq $m\_c\_d + P_{3} < c\_ch\_d$\grqq{} bedeutet: ist der Abstand zwischen der Maus und dem Käse kleiner dem Abstand zwischen der Katze und dem Käse so erfolgt der Zustandswechsel. Hier wird ein Wert $P_{3}$ hinzugefügt der als Hysterese fungiert.
-\\\\Im Zustand \glqq go to cheese\grqq{} löst das \glqq arrived\grqq{} Kriterium einen Wechsel in den Zustand \glqq go to mid\grqq{}
-aus. Äquivalent dazu löst das gleiche Kriterium im Zustand \glqq go to mid\grqq{} den Wechsel in den Zustand \glqq hunt\grqq{} aus.
+Das zweite Kriterium \glqq$m\_c\_d < P_{1} \land  m\_ch\_d > P_{2} $\grqq{} besagt: sollte der Abstand zwischen Katze und Maus einen gewissen Wert $P_{1}$ unterschritten haben und zus"atzlich der Abstand zwischen K"ase und Maus einen weiteren Wert $P_{2}$ "uberschritten haben so wird der Zustand gewechselt. Umgangssprachlich ausgedr"uckt bedeutet es, sollte sich die Katze nah an der Maus befinden und die Maus aber noch weit genug vom K"ase weg sein so wird die Maus gejagt. Wobei der Parameter $P_{1}$ \glqq nah \grqq{} und der Parameter $P_{2}$ \glqq noch weit genug\grqq{} definiert. 
+$P_{1}$ und $P_{2}$ wurden empirisch festgelegt.\\
+Das dritte Kriterum \glqq $m\_c\_d + P_{3} < c\_ch\_d$\grqq{} bedeutet: ist der Abstand zwischen der Maus und dem Käse kleiner dem Abstand zwischen der Katze und dem Käse so erfolgt der Zustandswechsel. Hier wird ein Wert $P_{3}$ hinzugefügt der als Hysterese fungiert.\\
+Die Parameter $P_{1}$, $P_{2}$ und $P_{3}$ wurden empirisch festgelegt.\\
+\\
+Im Zustand \glqq go to cheese\grqq{} löst das \glqq arrived\grqq{} Kriterium einen Wechsel in den Zustand \glqq go to mid\grqq{} aus. Äquivalent dazu löst das gleiche Kriterium im Zustand \glqq go to mid\grqq{} den Wechsel in den Zustand \glqq hunt\grqq{} aus.
 Von beiden Zuständen, \glqq go to cheese\grqq{} und \glqq go to mid\grqq{}, findet ein Wechsel in den Zustand \glqq hunt\grqq{} statt, sollte das zweite Kriterium, \glqq$m\_c\_d < P_{1} \land  m\_ch\_d > P_{2} $\grqq{}, erfüllt sein. Im Zustand \glqq hunt\grqq{} greift das dritte Kriterium, \glqq $m\_c\_d + P_{3} < c\_ch\_d$\grqq{}, um den Wechsel in den Zustand \glqq go to cheese\grqq{} einzuleiten.
 \subsubsection{Zustand: \glqq hunt\grqq{}}
 \label{hunt}
-Der Zustand \glqq hunt\grqq{} entscheidet ob die Maus direkt als Ziel angefahren wird oder ob die Katze die Bewegung der Maus vorrausberechnet. Im Fall der Vorrausberechnung wird auch entschieden wie weit vorrausberechnet wird.\\
-Das Berechnen der Bewegung bezweckt eine sich vom Käse entfernende Schlingerbewegung der Maus (\ref{fig:ziel.png}).
+Im Zustand \glqq hunt\grqq{} wird entschieden ob die Maus direkt als Ziel angefahren wird oder ob die Katze die Bewegung der Maus vorausberechnet. Im Fall der Vorausberechnung wird auch entschieden wie weit vorausberechnet wird.\\
+Die Berechnung der Bewegung bezweckt eine sich vom Käse entfernende Schlingerbewegung der Maus (\ref{fig:ziel.png}).
 Dieser Ansatz fungiert als Gegenspieler zu einem kraftbasierten Ansatz der Maus.
 \mygraphics{0.6\textwidth}{ziel.png}{Schlingerbewegung}
-Um diese Verhalten zu erreichen wird die Bewegung der Maus verschieden weit vorrausberechnet.
-Ist die Katze sehr nah an der Maus so wird die Maus als Ziel genutzt. Ist die Katze nah so wird die Maus maximal weit vorrausberechnet. Umso weiter die Katze von der Maus entfernt ist umso weniger weit wird die Maus vorrausberechnet.
-Bis schließlich die Maus wieder als Ziel genutzt wird.\\
+Um diese Verhalten zu erreichen wird die Bewegung der Maus verschieden weit vorausberechnet.
+Im Zustand  hunt \grqq{} wird, bis zu einem gewissen Schwellwert, nicht direkt die Maus angefahren sondern ein vorausberechneter Punkt vor der Maus. Je näher die Katze der Maus kommt desto weiter steuert sie vor die Maus. Unterschreitet die Distanz zwischen Katze und Maus einen gewissen Schwellwert, so wird direkt die Maus als Ziel gesetzt.
 \clearpage
-Den Wert der Skalierung der Vorrausberechnung wird r-Wert genannt. Er wird anhand einer Funktion berechnet.
-Gegeben aus den Anforderungen benötigt besagte Funktion eine sägezahnähnliche Form.\\Hierzu wurde die Funktion $r= \frac{2}{x} - \frac{2}{x^3}$
+Den Wert der Skalierung der Vorausberechnung wird r-Wert genannt. Er wird anhand einer Funktion berechnet.
+Gegeben aus den Anforderungen benötigt besagte Funktion eine sägezahnähnliche Form.\\
+Hierzu wurde die Funktion $r= \frac{2}{x} - \frac{2}{x^3}$
 gewählt mit $x := Distanz(Maus,Katze)$  (\ref{fig:huntFunction.png}).
 \mygraphics{0.9\textwidth}{huntFunction.png}{r-Faktor Funktion}
 \clearpage
 \subsection{Collison Avoidance}
-Fabian
-Die Drehung der Katze wird durch einen Radianten \footnote {Wertebereich [0:2 $\pi$]} angegeben. Ein positiver Wert führt zu einer Drehung gegen den Uhrzeigersinn, dementsprechend führt ein negativer Wert zu einer Drehung in Uhrzeigersinn.
-Die Lasersensoren scannen 360 Grad um die Katze in je 1 Grad Schritten, abgegeben in Radianten \footnote {1 Gard ~ 0,0174533}, Objekte werden ab einer entfernung von 3,5 Metern erkannt.
-Bei der Kollisionsvermeidung werden nicht alle 360 Werte berücksichtigt. Die relevanten Werte werden durch einen Parameter angegeben \footnote {rel\_phi Zeile 123}, welche angibt wie groß der relevante Scannbereich sein soll.
-
+Bei der Kollisionsvermeidung werden nicht alle 360 Sensorwerte berücksichtigt. Der relevante Bereich wird durch einen Parameter \footnote {rel\_phi} angegeben. Objekte die im Scanbereich sind haben eine abstoßende Wirkung auf die Katze.
 \subsubsection{Funktionsentwiklung}
-Folgende Kriterein waren für die Funktion der Kollisionsvermeidung wichtig.
+Folgende Kriterien sind für die Funktion der Kollisionsvermeidung wichtig.
 \begin{itemize}
 \item Je geringer die Distanz zu einem Objekt \footnote {sensor.range} desto größe die Kraft
-\item Je geringer der Winkel einem Obekt zur Fahrtrichtung der Katze, desto größer deren Kraft
+\item Je geringer der Winkel eines Objekts zur Katze, desto größer deren Kraft \footnote{Ein Objekt in Fahrtrichtung soll eine größere Kraft haben als ein Objekt welches sich Seitlich befindet}
 \end{itemize}
-
 Nun ist ein genauer Blick auf die Wertebereiche der relevanten Variablen nötig.\\
-
  \begin{tabular}[h]{lcr}
  Variable & Wert & Auswirkung auf die Kraft \\
  sensor.angular & $[0 : rel\_phi]$ & negativ (Drehung mit den Uhrzeigersinn) \\
  sensor.angular & $[2\pi : 2\pi-rel\_phi]$ & positiv (Drehung gegen den Uhrzeigersinn) \\
  sensor.range & gegen 0,8  & Kraft gegen 0 \\
  sensor.range & gegen 0 & Kraft wird größer \\
-
  \end{tabular}
 \\
-
+Folgende Funktion erfüllt die aufgestellten Kriterien und weist die gewünschten Verhaltensweise auf.
 \[ Force= -\sin(sensor.angular) * (rel\_range-sensor.range) \]
 \mygraphics{0.7\textwidth}{Kollision.png}{Funktion Collison Avoidance}
-Die negative Sinusfunktion wird hier als Grundgerüst genommen. Da sich sensor.angle zwischen 0 und 2$/pi$ bewegt. Werte nahe der 0 führen zu einer negativen Kraft und bewirken somit eine Rechtsdrehung. Werte nahe $2\pi $ bewirkeln hingegen eine Linksdrehung. Die so entstehende, Winkel abhänige, Kraft soll nun größer werden je kleiner die Distanz ist.
-
-
-\subsubsection{Maus reausrechen}
-Die aufgestellte Funktion erzeugt das gewünschte Verhalten, zeigt jedoch bei späterne Tests einen gravirenden Fehler. Die Katze weicht nun bei der Jagt nach der Maus selbigerauch aus und ist so nicht im Stande die Maus zu fangen. \\
-Um dieses Problem zu lösen wurde ein Speziallfall entwickelt.
-Ziel ist es die Maus für die Kollisionsvermeidung unsichtbar zu machen. \\
+Die negative Sinusfunktion wird hier als Grundgerüst genommen., da sich sensor.angle zwischen 0 und 2$/pi$ bewegt. Werte nahe der 0 führen zu einer negativen Kraft und bewirken somit eine Rechtsdrehung. Werte nahe $2\pi $ bewirken hingegen eine Linksdrehung. Die so entstehende winkelabhängige Kraft wird  nun mit der Distanz multipliziert, von der vorher von der Maximaldistanz abgezogen wird. Somit ist der Multiplikator größer, je kleiner die Distanz ist.
+\subsubsection{Sonderfälle}
+Die Maus wird von den Sensoren erfasst und muss daher aus der Kollisionsvermeidung herausgerechnet werden.\\
+Um dieses Problem zu lösen wurde ein Spezialfall entwickelt.
+Ziel ist es alle Sensorwerte, die die Maus erfassen zu bestimmen und diese in der Kollisionsvermeidung nicht  zu berücksichtigen. \\
 \paragraph{Strategie:}
 \begin{enumerate}
-\item Maus ist in Scannreichweite
+\item Maus ist in Scanreichweite
 \item Gescannte Range entspricht der Entfernung zur Maus
 \item Relevante Winkle in Bezug auf die Größe der Maus berechnen
 \item Alle sensor.range-Werte der relevanten Winkel auf infinity setzen
 \end{enumerate}
-
-Sobald die Maus in Sensorreichweite ist, ist es wichtig zu überprüfen ob die Sensor.range der mathematsichen Distanz zur Maus entspricht. Falls man dies nicht überprüft kann es passieren, dass sich ein Hindernis zwischen Maus und Katze befinden. Das Hindernis wir von dem Alorithmus als Maus tituliert und für die Kollisionsvermeidung nicht berücksichtigt. Dies hat zur Folge, dass die Katze in das Hindernis hineinfährt.\\
-
-Sofern diese Fälle berücksichtigt worden sind, kann es daran gehen die relevanten Sensorwerten zu löschen(auf infinity zu setzten). \\
-
-Zuerst wird der angkle\_mouse berechnet dies ist der Winkel aus Sicht der Katze zur Maus, mit den globalen Positionsangabne\footnote{Positionen der Maus in odom Sysem}.
+Sobald die Maus in Sensorreichweite ist, ist es wichtig zu überprüfen ob die Sensor.range der mathematischen Distanz zur Maus entspricht. Falls man dies nicht überprüft kann es passieren, dass sich ein Hindernis zwischen Maus und Katze befinden. Das Hindernis wird von dem Algorithmus als Maus tituliert und für die Kollisionsvermeidung nicht berücksichtigt. Dies hat zur Folge, dass die Katze in das Hindernis hineinfährt.\\
+Sofern diese Fälle berücksichtigt worden sind, kann es daran gehen die relevanten Sensorwerten zu löschen, dies bedeutet sie auf Infinity zu setzen. \\
+Zuerst wird der angle\_mouse berechnet dies ist der Winkel aus Sicht der Katze zur Maus, mit den globalen Positionsangabne\footnote{Positionen der Maus in odom Sysem}.
 \[ angle\_mouse=\tan( \frac{\Delta x}{\Delta y} ) -cat\_phi \]
-
-Angle\_mous gibt den Winkel der Maus zur Basis der Katze an, nun wird berechnet welcher Sensorwinkel auf die Mitte der Maus zeigt:
-
+Angle\_mouse gibt den Winkel der Maus zur Basis der Katze an, nun wird berechnet welcher Sensorwinkel auf die Mitte der Maus zeigt:
 \[ laserMouse\_middle  =  \vert \frac{ (angle\_mouse + 2  \pi) \% (2 \pi)}{angle\_increment}  \vert * angle\_increment \]
 \mygraphics{0.5\textwidth}{collisionANGLE2.png}{Veranschaulichung Sensor.angle Katze}
-Nachdem der Sensorwinkel zu Mitte der Maus berechnet wurde, wird mit Hilfe des Radiuses(mouse\_radius) der Maus die Ausenwinkel berechnet.
-
-\[ 
+Nachdem der Sensorwinkel zu Mitte der Maus berechnet wurde, wird mit Hilfe des Radiuses(mouse\_radius) der Maus die Außenwinkel berechnet.
+\[
 laserMous\_border =  \vert { \tan( \frac{mouse\_radius}{\Delta cat\_mouse} ) } / angle\_increment \vert  * angle\_increment \]
 \hspace*{0.63\textwidth}\scalebox{0.7}{\begin{tabular}[h]{|c|}
 \hline
@@ -444,29 +438,21 @@ Rot := $\Delta cat\_mouse$ \\
 \hline
 \end{tabular}}
 \mygraphics{0.5\textwidth}{catmous.png}{Übersicht Funktionen Katze und Maus}
-
-Nachdem berechnet wurde welche sensor.amgle-Werte momentan die Maus scannen, werden alle Sensor.range-Werte dieser Winkel auf Infinity gesetzt. Nachdem alle relevanten Werte des Lasersensors auf Infinity gesetzt sind, ist die Maus für die Kollisionsvermeidung unsichtbar und die Katze sieht die Mous nicht als Hindernis an, welchesihre Fahrtrichtung beeinflusst.
+Nachdem berechnet wurde welche sensor.angle-Werte momentan die Maus scannen, werden alle Sensor.range-Werte dieser Winkel auf Infinity gesetzt. Nachdem alle relevanten Werte des     Sensors auf Infinity gesetzt sind, ist die Maus für die Kollisionsvermeidung unsichtbar und die Katze sieht die Maus nicht als Hindernis an, welche ihre Fahrtrichtung beeinflusst.
 \mygraphics{0.5\textwidth}{collisionMOUS.png}{Lasersensor ignorieren }
-
-\subsubsection{Maus reausrechen}
-Eine Weitere Schwierigkeit zeigte sich als der Käse in der Fahrspur der Katze lag. Der Lasersensor der Katze scannt horizontal auf einer bestimmten Höhe. Da der Käse zu niedrig ist, um vom lasersensor erfasst zu werden weicht die Katze dem Käse nicht aus, sondern fährt in ihn hinein. \\
+Ein weiterer Spezialfall ist der Käse. Er ist zu niedrig um vom Lidar erfasst zu werden.
+Eine Weitere Schwierigkeit zeigte sich als der Käse in der Fahrspur der Katze lag. Der Lasersensor der Katze scannt horizontal auf einer bestimmten Höhe. Da der Käse zu niedrig ist, um vom Lasersensor erfasst zu werden weicht die Katze dem Käse nicht aus, sondern fährt in ihn hinein. \\
 Um dieses Verhalten zu beseitigen wurde eine Möglichkeit gesucht den Käse in die Kollisionsvermeidung miteinzubeziehen.
-
 \paragraph{Strategie:}
 \begin{enumerate}
-\item Käse ist in Scannreichweite
+\item Käse ist in Scanreichweite
 \item Relevante Winkle in Bezug auf die Größe und Position des Käses berechnen
 \item Alle sensor.range-Werte der relevanten Winkel Werte zuweisen
 \end{enumerate}
-
 Mit dem Globalen Koordinaten wird überprüft ob der Käse theoretisch in Sensorreichweite ist. Parallel zum Vorgehen bei der Maus wird der Winkel vom Käse zur Katze und der Sensorwinkle zur Mitte des Käses berechnet.
-
 \[ angle\_cheese=\tan( \frac{\Delta x}{\Delta y} ) -cat\_phi \]
-
 \[ laserMouse\_cheese  =  \vert \frac{ (angle\_cheese + 2  \pi) \% (2 \pi)}{angle\_increment}  \vert * angle\_increment \]
-
 Nachdem berechnet wurde wo der Käse sich befindet, werden mithilfe der Kreisfunktion die sensor.range-Werte berechnet und gesetzt. $ sensor.range=\sqrt[]{ rad^2 -x^2 }$
-
 \[ sensor.range_i = \Delta cheese - \sqrt[]{ cheese\_rad^2 -\frac{\tan( laser\_cheesMiddl - angle_i) }{\Delta cheese}^2 }\]
 \hspace*{0.63\textwidth}\scalebox{0.7}{\begin{tabular}[h]{|c|}
 \hline
@@ -476,91 +462,50 @@ Lilia := $sensor.range_i$ \\
 \hline
 \end{tabular}}
 \mygraphics{0.5\textwidth}{catcheese.png}{Überblick Katze Käse}
-
-Nachdem alle Werte berechnez sind kann die normake Kollisionsvermeidung durchgeführt werden. Die Katze "sieht" nun dort wo sich der Käse befindet einen Halbkreis und weicht diesem Objekt aus. Es wird der Katze eine Säule an der Position des Käse vorgeteucht.
+Nachdem alle Werte berechnet sind kann die normale Kollisionsvermeidung durchgeführt werden. Die Katze registriert nun dort wo sich der Käse befindet einen Halbkreis und weicht diesem Objekt aus. 
+Es wird der Katze eine Säule an der Position des Käse vorgetäuscht.
 \mygraphics{0.5\textwidth}{collisionCHEESE.png}{Käse als Hindernis Simuliert}
-
-
-\section{Dikussion und Ausblick}
+\section{Diskussion und Ausblick}
+\subsection{Verbesserungen am Ansatz}
+\subsection{Vermutung}
+Welt 3
+In der leeren Welt ist die höhere Ge
+Welt 2
+Welt 3
 Alle
 \subsection{Videos}
-
 DIe Kritik bezieht sich auf das gegebene Problem
-
 Änderung der Geschwindigkeit kann keine Lösung sein --> quasi gottgegeben
 Mensch könnte auch nicht 100 kmh schnell rennen
-
 Video 1 und 2
 In den Videos ist zu sehen Maus funktioniert gut
-
 aber auch nur weil maus drehung nicht ausnutzen
-
 Video 3
-Drehung ausgenutz und klar Besser
-Im Falle von Kraftbasiert muss die Maus einen Fehler machen ansosnten hat die Katze keine Chance
-
-
+Drehung ausgenutzt und klar besser
+Im Falle von Kraftbasiert muss die Maus einen Fehler machen ansonsten hat die Katze keine Chance
 Große Probleme Bei Sackgassen
-Robo besitz kein REcover verhalten
-Maus direct hinter hinderniss
-
+Roboter besitzt kein Recovery verhalten
+Maus direkt hinter Hindernis
 Katze kann hängenbleiben
-
 Optimierung durch NN
-
--> VErhaltensfusion
-
+-> Verhaltensfusion
 Aufteilung in mehrere Ros Nodes
-
-KRaftbasiert ist rein reactiv
-
-kein Planendes VErhalten
-
-Mit mehr Rechenkapazität ist Planendes Verhalten vielversprechend
-
-
+Kraftbasiert ist rein reaktiv
+kein planendes Verhalten
+Mit mehr Rechenkapazität ist planendes Verhalten vielversprechend
 Homing mittels A stern möglich
 Berechnung ist aufwändig
-
-Unser Design ist in usneren Augen das beste mit den gegbenen Voprraussetzungen weil
-
-
-
-
-\subsection{VErbesserungen}
-
-VErhaltensfusion
-
+Unser Design ist in unseren Augen das beste mit den gegebenen Voraussetzungen weil
+\subsection{Verbesserungen}
+Verhaltensfusion
 Alle
 \subsection{Szenarien}
 Alle
-
-
-
-
-\section{Hallo}
-\subsection{whadiwahfliwahfi}
-Facilis repudiandae deleniti facere tempora tenetur nostrum eos iusto. Ipsum non nihil magni rem quam. Quas autem non esse ut voluptatem omnis.
-Adipisci laboriosam aut omnis nam saepe impedit. Deleniti voluptates corporis in. Dolorem hic dolore quibusdam sed non sed.
-Impedit ea provident atque quo. Dolor eaque quia consectetur veniam in voluptatum. A nihil voluptatem sed autem similique molestiae. Tenetur veniam architecto iure ducimus natus atque hic. Repellat fuga animi nam ut neque et ea sunt. Odit velit esse quidem facilis.
-Quibusdam qui est et rem a velit distinctio. Ut maiores dignissimos rem provident iure sed. Dolores quis voluptates error non eaque. Atque autem sed labore velit. Repellat itaque animi sit fuga omnis ut velit.
-Voluptatem nostrum eos ea eligendi adipisci nemo veritatis. Est temporibus quaerat nostrum id. Ullam voluptatem neque hic at odit et architecto laboriosam.
-\section{Hallo2}
-
-
-
-
-
-
-
-
 %%%
 %%% end main document
 %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 % \appendix  %% include it, if something (bibliography, index, ...) follows below
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%
 %%% bibliography
@@ -568,11 +513,9 @@ Voluptatem nostrum eos ea eligendi adipisci nemo veritatis. Est temporibus quaer
 %%% available styles: abbrv, acm, alpha, apalike, ieeetr, plain, siam, unsrt
 %%%
 % \bibliographystyle{plain}
-
 %%% name of the bibliography file without .bib
 %%% e.g.: literatur.bib -> \bibliography{literatur}
 % \bibliography{FIXXME}
-
 \end{document}
 %%% }}}
 %%% END OF FILE
