--- a/documentation/roga_docu.tex
+++ b/documentation/roga_docu.tex
@@ -471,7 +471,7 @@ Der Erfolg ist allerdings sehr abhängig von den Karten und den implementierten 
 \subsubsection{Fehlerhafter Zustandsautomat}
 Bei der Auswertung des Videos c\_1\_15\_1\_c  ist zu sehen, dass der Zustandsautomat nicht differenziert genug ist. In dem Video sieht man, wie die Katze aus dem Zustand \glqq hunt\grqq{} in den Zustand \glqq go to cheese\grqq{} wechselt, da die Maus näher am Käse ist als die Katze. Nachdem die Katze nun zum Käse fährt und diesen erreicht wechselt die Katze wieder in den Zustand \glqq hunt \grqq{}. Zu diesem Zeitpunkt ist die Maus jedoch schon zu nahe am Käse und die Drehgeschwindigkeit der Katze reicht nicht aus um die Maus noch zu erreichen.
 Das Problem ließe sich auf verschiedene Weise lösen, zeigt jedoch das grundsätzliche Problem, dass der Zustandsautomat nicht genügend Grenzfälle abfängt. Ein Ansatz wäre, vor dem Wechsel  vom Zustand \glqq hunt \grqq{} in den Zustand \glqq go to cheese\grqq{} den Abstand von Maus zur Katze mit der Distanz von Maus zum Käse zu vergleichen.
-\subsubsection{Recobvery Strategie}
+\subsubsection{Recovery Strategie}
 Bei Karten mit komplexen, polygonen Hindernissen oder Sackgassen (siehe Szenario A) ist die Katze zum jetzigen Zeitpunkt nicht in der Lage darauf zu reagieren. Eine Recovery Strategie für Sackgassen fehlt komplett. Eine Strategie ließe sich mittels neuer Zustände oder äquivalent mit einer Verhaltensfusion integrieren. Für komplexe, polygone Hindernisse wäre ein Path Planning Ansatz vorteilhafter.
 \subsubsection{Sinusfunktion}
 Bei näherer Betrachtung der Funktion zur Berechnung der Kraft \ref{collision} bei der Kollisionsvermeidung fällt auf, dass bei Winkelwerten gegen 0 und gegen 2 $\pi$ die Funktion gegen 0 geht. Dies hat zur Folge, dass Objekte nahe der Fahrtrichtung wenig bis keine Abstoßungskraft haben.  Objekte die bei einem Winkel von $ \frac{2}{\pi}$ Rad und $3 \frac{\pi}{2} $   liegen haben dagegen die Maximale Abstoßungskraft(Extrempunkte).
